[gd_scene load_steps=4 format=3 uid="uid://djof0x4kgirdu"]

[ext_resource type="Script" path="res://script/picker_control.gd" id="1_k3fsf"]
[ext_resource type="Script" path="res://script/picker_sliders_hsv.gd" id="2_ipt85"]
[ext_resource type="Script" path="res://script/picker_shape_hsv.gd" id="3_ss4pi"]

[node name="Control" type="Control"]
offset_right = 84.0

[node name="PickerControl" type="VBoxContainer" parent="."]
offset_right = 84.0
offset_bottom = 110.0
script = ExtResource( "1_k3fsf" )
edit_alpha = false

[node name="PickerSlidersHSV" type="VBoxContainer" parent="."]
offset_left = 398.0
offset_top = 47.0
offset_right = 669.0
offset_bottom = 169.0
script = ExtResource( "2_ipt85" )
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="PickerShapeHSV" type="AspectRatioContainer" parent="."]
offset_left = 347.0
offset_top = 212.0
offset_right = 387.0
offset_bottom = 252.0
script = ExtResource( "3_ss4pi" )
shape = 1
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="PickerShapeHSV2" type="AspectRatioContainer" parent="."]
offset_left = 695.0
offset_top = 217.0
offset_right = 735.0
offset_bottom = 257.0
script = ExtResource( "3_ss4pi" )
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false
